--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,5 +1,5 @@
 /*  typography */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@531&display=swap');
 
 body {
   line-height: 1.2;
